@@ -1142,6 +1142,7 @@ about.text=jEdit is brought to you by\n\
 	Rudolf Widmann\n\
 	Ryan Fowler\n\
 	Ryan Grove\n\
+	Ryan Mott\n\
 	Saimon Moore\n\
 	Satguru Srivastava\n\
 	Scott Allen\n\
